# datadron

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/core/client/: client.py  consts.py  models.py
src/logger/: __init__.py
src/tests/: client_test.py
