[tool.poetry]
name = "datadron"
version = "0.1.0"
description = "HTTPX wraped tool for parsing"
authors = ["alexlukyanets"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
